test/grammar/syntax/else_if_token/stderr.golden
error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:3:1
  |
3 | else if False:
  |  'else if' here is invalid in KCL, consider using the 'elif' keyword
  |

error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:3:9
  |
3 | else if False:
  |         ^ expected one of [":"] got identifier
  |

error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:3:14
  |
3 | else if False:
  |              ^ expected one of ["identifier", "literal", "(", "[", "{"] got :
  |

error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:3:14
  |
3 | else if False:
  |              ^ expected one of ["any", "bool", "int", "float", "str", "True", "False", "identifier", "literal", "[", "{", ")"] got newline
  |

error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:4:5
  |
4 |     b = 1
  |     ^ expected one of ["="] got indent
  |

error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:4:5
  |
4 |     b = 1
  |     ^ expected one of ["identifier"] got indent
  |

error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:4:5
  |
4 |     b = 1
  |     ^ unexpected token 'indent'
  |

error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:4:9
  |
4 |     b = 1
  |         ^ unexpected token 'dedent'
  |

error[E2L23]: CompileError
 --> ${CWD}/main.k:3:14
  |
3 | else if False:
  |              ^ missing target in the assign statement
  |
